--- a/experiment_notebooks/02_preprocessing_poker.ipynb
+++ b/experiment_notebooks/02_preprocessing_poker.ipynb
@@ -30,7 +30,10 @@
     "\n",
     "train_data = pd.read_csv(\"/data/pokerhands/train.csv\")\n",
     "test_data = pd.read_csv(\"/kaggle/pokerhands/test.csv\")\n",
-    "test_data = test_data.head(10000)"
+    "test_data_correct = pd.read_csv(\"/kaggle/pokerhands/test_correct.csv\")\n",
+    "\n",
+    "test_data = test_data.head(10000)\n",
+    "test_data_correct = test_data_correct.head(10000)"
    ]
   },
   {
@@ -120,8 +123,19 @@
    "source": [
     "x_test = np.array(x_test).astype(int)\n",
     "predictions = model.predict(x_test).astype(int)\n",
-    "output = pd.DataFrame({'id': test_data.id, 'hand': predictions})"
+    "output = pd.DataFrame({'id': test_data.id, 'hand_predict': predictions})\n",
+    "\n",
+    "output = pd.concat([output, test_data_correct], axis=1)\n",
+    "correct = output[(output['hand'] == output['hand_predict'])].count()\n",
+    "print(correct / 10000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
