--- a/experiment_notebooks/02_preprocessing_poker.ipynb
+++ b/experiment_notebooks/02_preprocessing_poker.ipynb
@@ -47,24 +47,24 @@
     "    a1 = df[['C1', 'C2', 'C3', 'C4', 'C5']].min(axis = 1)\n",
     "    b1 = 5 * a1 + 10\n",
     "    a2 = df[['C1', 'C2', 'C3', 'C4', 'C5']].max(axis = 1).apply(scp.math.factorial)\n",
-    "    b2 = (df[['C1', 'C2', 'C3', 'C4', 'C5']].min(axis = 1) -1 ).apply(scp.math.factorial)\n",
+    "    b2 = (df[['C1', 'C2', 'C3', 'C4', 'C5']].min(axis = 1) - 1).apply(scp.math.factorial)\n",
     "    c = a2/b2\n",
     "    df['min-straight'] = ((df['C1']*df['C2']*df['C3']*df['C4']*df['C5'] == c) & (df['C1']+df['C2']+df['C3']+df['C4']+df['C5'] == b1)) | ( (df[['C1', 'C2', 'C3', 'C4', 'C5']].min(axis = 1) == 1) & (df['C1']*df['C2']*df['C3']*df['C4']*df['C5'] == 17160))\n",
     "    df['min - straight flush'] = df['min-flush'] & df['min-straight']\n",
-    "    df['RF'] = df[df['min - straight flush']==True][['C1', 'C2', 'C3','C4', 'C5']].sum(axis =1) == 47\n",
+    "    df['RF'] = df[df['min - straight flush'] == True][['C1', 'C2', 'C3', 'C4', 'C5']].sum(axis = 1) == 47\n",
     "    df['RF'] = df['RF'].fillna(False)\n",
-    "    df['straight flush'] = (df['min - straight flush'] ==True) & (df['RF'] ==False)\n",
+    "    df['straight flush'] = (df['min - straight flush'] == True) & (df['RF'] == False)\n",
     "    df['straight flush'] = df['straight flush'].fillna(False)\n",
     "    df = df.drop('min - straight flush', axis = 1)\n",
-    "    df['flush'] = (df['straight flush'] == False) & (df['min-flush'] ==True) & (df['RF'] ==False)\n",
-    "    df['straight'] = (df['straight flush'] == False) & (df['min-straight'] ==True) & (df['RF'] ==False)\n",
+    "    df['flush'] = (df['straight flush'] == False) & (df['min-flush'] == True) & (df['RF'] == False)\n",
+    "    df['straight'] = (df['straight flush'] == False) & (df['min-straight'] == True) & (df['RF'] == False)\n",
     "    df = df.drop('min-straight', axis = 1)\n",
     "    df = df.drop('min-flush', axis = 1)\n",
     "    df['flush'] = df['flush'].fillna(False)\n",
     "    df['straight'] = df['straight'].fillna(False)\n",
-    "    df['Nothing in hand'] = (df[['C1', 'C2', 'C3', 'C4', 'C5']].nunique(axis =1) == 5) & (df['straight'] ==False) & (df['flush'] == False) & (df['RF'] == False)& (df['straight flush'] == False) \n",
+    "    df['Nothing in hand'] = (df[['C1', 'C2', 'C3', 'C4', 'C5']].nunique(axis = 1) == 5) & (df['straight'] == False) & (df['flush'] == False) & (df['RF'] == False)& (df['straight flush'] == False) \n",
     "    df['Nothing in hand'] = df['Nothing in hand'].fillna(False)\n",
-    "    df['One pair'] = (df[['C1', 'C2', 'C3', 'C4', 'C5']].nunique(axis =1) == 4)\n",
+    "    df['One pair'] = (df[['C1', 'C2', 'C3', 'C4', 'C5']].nunique(axis = 1) == 4)\n",
     "    df['One pair'] = df['One pair'].fillna(False)\n",
     "    df['Four of a kind or Full house'] = df[['C1', 'C2', 'C3', 'C4', 'C5']].nunique(axis = 1) == 2\n",
     "    df['Two pairs or Three of a kind'] = df[['C1', 'C2', 'C3', 'C4', 'C5']].nunique(axis = 1) == 3\n",
