Perfect accuracy poker

--- a/experiment_notebooks/02_preprocessing_poker.ipynb
+++ b/experiment_notebooks/02_preprocessing_poker.ipynb
@@ -1,25 +1,8 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": 3
-  },
-  "orig_nbformat": 2
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +11,10 @@
     "import scipy as scp\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "train_data = pd.read_csv(\"/data/pokerhands/train.csv\")\n",
-    "test_data = pd.read_csv(\"/kaggle/pokerhands/test.csv\")\n",
-    "test_data_correct = pd.read_csv(\"/kaggle/pokerhands/test_correct.csv\")\n",
+    "ROOT = os.path.dirname(os.getcwd())\n",
+    "train_data = pd.read_csv(os.path.join(ROOT, 'data', 'pokerhands', 'train.csv'))\n",
+    "test_data = pd.read_csv(os.path.join(ROOT, 'data', 'pokerhands', 'test.csv'))\n",
+    "test_data_correct = pd.read_csv(os.path.join(ROOT, 'data', 'pokerhands', 'test_correct.csv'))\n",
     "\n",
     "test_data = test_data.head(10000)\n",
     "test_data_correct = test_data_correct.head(10000)"
@@ -38,11 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess(df):\n",
+    "def preproc(df):\n",
     "    df['min-flush'] = (df['S1']==df['S2'])&(df['S2']==df['S3'])&(df['S3']==df['S4'])&(df['S4']==df['S5'])\n",
     "    a1 = df[['C1', 'C2', 'C3', 'C4', 'C5']].min(axis = 1)\n",
     "    b1 = 5 * a1 + 10\n",
@@ -91,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,9 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id              1.0\n",
+      "hand_predict    1.0\n",
+      "id              1.0\n",
+      "hand            1.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "x_test = np.array(x_test).astype(int)\n",
     "predictions = model.predict(x_test).astype(int)\n",
@@ -129,13 +125,27 @@
     "correct = output[(output['hand'] == output['hand_predict'])].count()\n",
     "print(correct / 10000)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
