--- a/experiment_notebooks/02_preprocessing_poker.ipynb
+++ b/experiment_notebooks/02_preprocessing_poker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,8 @@
     "import pandas as pd\n",
     "import scipy as scp\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from xgboost import XGBClassifier\n",
+    "import os\n",
     "\n",
     "ROOT = os.path.dirname(os.getcwd())\n",
     "train_data = pd.read_csv(os.path.join(ROOT, 'data', 'pokerhands', 'train.csv'))\n",
@@ -22,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,11 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = preproc(train_data)\n",
+    "#train_df = preproc(train_data)\n",
+    "train_df = train_data\n",
     "\n",
     "x = train_df.drop('hand', axis =1)\n",
     "y = train_df['hand']\n",
@@ -88,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,22 +99,22 @@
     "model.fit(x, y)\n",
     "x_test = test_data\n",
     "x_test = x_test.drop('id', axis = 1)\n",
-    "x_test = preproc(x_test)"
+    "#x_test = preproc(x_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id              1.0\n",
-      "hand_predict    1.0\n",
-      "id              1.0\n",
-      "hand            1.0\n",
+      "id              0.618\n",
+      "hand_predict    0.618\n",
+      "id              0.618\n",
+      "hand            0.618\n",
       "dtype: float64\n"
      ]
     }
@@ -125,6 +128,61 @@
     "correct = output[(output['hand'] == output['hand_predict'])].count()\n",
     "print(correct / 10000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[18:10:14] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.3.0/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\musta\\anaconda3\\lib\\site-packages\\xgboost\\sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost: id              0.7298\n",
+      "hand_predict    0.7298\n",
+      "id              0.7298\n",
+      "hand            0.7298\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = XGBClassifier()\n",
+    "model.fit(x, y)\n",
+    "x_test = test_data\n",
+    "x_test = x_test.drop('id', axis = 1)\n",
+    "#x_test = preproc(x_test)\n",
+    "\n",
+    "x_test = np.array(x_test).astype(int)\n",
+    "predictions = model.predict(x_test).astype(int)\n",
+    "output = pd.DataFrame({'id': test_data.id, 'hand_predict': predictions})\n",
+    "\n",
+    "output = pd.concat([output, test_data_correct], axis=1)\n",
+    "correct = output[(output['hand'] == output['hand_predict'])].count()\n",
+    "print(\"XGBoost:\", correct / 10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
