--- a/experiment_notebooks/02_preprocessing_poker.ipynb
+++ b/experiment_notebooks/02_preprocessing_poker.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Description\n",
+    "\n",
+    "Preprocessing the poker hands dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +32,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preproc(df):\n",
+    "def preprococess(df):\n",
     "    df['min-flush'] = (df['S1']==df['S2'])&(df['S2']==df['S3'])&(df['S3']==df['S4'])&(df['S4']==df['S5'])\n",
     "    a1 = df[['C1', 'C2', 'C3', 'C4', 'C5']].min(axis = 1)\n",
     "    b1 = 5 * a1 + 10\n",
@@ -77,11 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#train_df = preproc(train_data)\n",
+    "#train_df = preprococess(train_data)\n",
     "train_df = train_data\n",
     "\n",
     "x = train_df.drop('hand', axis =1)\n",
@@ -90,8 +106,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,74 +122,35 @@
     "model.fit(x, y)\n",
     "x_test = test_data\n",
     "x_test = x_test.drop('id', axis = 1)\n",
-    "#x_test = preproc(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "id              0.618\n",
-      "hand_predict    0.618\n",
-      "id              0.618\n",
-      "hand            0.618\n",
-      "dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
+    "#x_test = preprococess(x_test)\n",
+    "\n",
     "x_test = np.array(x_test).astype(int)\n",
     "predictions = model.predict(x_test).astype(int)\n",
     "output = pd.DataFrame({'id': test_data.id, 'hand_predict': predictions})\n",
     "\n",
     "output = pd.concat([output, test_data_correct], axis=1)\n",
-    "correct = output[(output['hand'] == output['hand_predict'])].count()\n",
-    "print(correct / 10000)"
+    "correct = output[(output['hand'] == output['hand_predict'])]['id'].count()\n",
+    "print(\"Random Forest:\", correct / 10000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XGBoost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[18:10:14] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.3.0/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\musta\\anaconda3\\lib\\site-packages\\xgboost\\sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
-      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XGBoost: id              0.7298\n",
-      "hand_predict    0.7298\n",
-      "id              0.7298\n",
-      "hand            0.7298\n",
-      "dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = XGBClassifier()\n",
     "model.fit(x, y)\n",
     "x_test = test_data\n",
     "x_test = x_test.drop('id', axis = 1)\n",
-    "#x_test = preproc(x_test)\n",
+    "#x_test = preprococess(x_test)\n",
     "\n",
     "x_test = np.array(x_test).astype(int)\n",
     "predictions = model.predict(x_test).astype(int)\n",
@@ -201,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
