--- a/experiment_notebooks/03_tabnet_vs_node_rossmann.ipynb
+++ b/experiment_notebooks/03_tabnet_vs_node_rossmann.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,48 +34,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'xgb_r' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-aa88f7c66230>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mxgboost\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mXGBRegressor\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mpred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mxgb_r\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_X\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m123\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'xgb_r' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE :  385.070164\n"
      ]
     }
    ],
    "source": [
     "from xgboost import XGBRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
-    "pred = xgb_r.predict(test_X)\n",
+    "from sklearn.metrics import mean_squared_error as MSE\n",
+    "\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123)\n",
-    "xgb_r = XGBRegressor(objective ='reg:squarederror', n_estimators = 10, seed = 123)\n",
+    "\n",
+    "model = XGBRegressor()\n",
     "\n",
     "#fit\n",
-    "xgb_r.fit(X_train, y_train)\n",
+    "model.fit(X_train, y_train)\n",
     "\n",
     "#pred\n",
-    "pred = xgb_r.predict(X_test)\n",
+    "pred = model.predict(X_test)\n",
     "\n",
     "#evaluation\n",
     "rmse = np.sqrt(MSE(y_test, pred))\n",
-    "print(\"RMSE : % f\" %(rmse))\n"
+    "print(\"RMSE : % f\" %(rmse))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TabNet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device used : cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pytorch_tabnet.tab_model import TabNetRegressor\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123)\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X_train, y_train, test_size=0.2, random_state=123)\n",
+    "\n",
+    "model = TabNetRegressor()  #TabNetRegressor()\n",
+    "\n",
+    "model.fit( \n",
+    "    X_train.to_numpy(), y_train.to_numpy(),\n",
+    "    eval_set=[(X_valid.to_numpy(), y_valid.to_numpy())],\n",
+    "    eval_metric=['mse']\n",
+    ")\n",
+    "\n",
+    "preds = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "xgb_r = XGBRegressor(objective ='reg:squarederror', n_estimators = 10, seed = 123)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
