--- a/experiment_notebooks/01_EDA_rossmann.ipynb
+++ b/experiment_notebooks/01_EDA_rossmann.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Description"
+    "# Description\n",
+    "\n",
+    "In this notebook we will conduct an EDA and preprocessing on the Rossmann Stores dataset."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we will conduct an EDA on the rossman dataset.\n",
-    "\n",
     "### Import "
    ]
   },
