--- a/experiment_notebooks/03_tabnet_xgboost_income.ipynb
+++ b/experiment_notebooks/03_tabnet_xgboost_income.ipynb
@@ -17,6 +17,15 @@
   },
   "cells": [
     {
+      "source": [
+        "# Description\n",
+        "\n",
+        "Running XGBoost and TabNet on the Adult Income dataset"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -103,17 +112,6 @@
           "name": "stderr"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jD6DnZVcmz-T"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 2,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2729,9 +2727,7 @@
       "metadata": {
         "id": "4pjBm3mqR5Lz"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
