--- a/experiment_notebooks/04_node_income.ipynb
+++ b/experiment_notebooks/04_node_income.ipynb
@@ -19,7 +19,9 @@
         "id": "fsr4aN9VzJVd"
       },
       "source": [
-        "#Training and hypertuning NODE for tabular data\n",
+        "# Description\n",
+        "\n",
+        "Training and hypertuning NODE for tabular data\n",
         "\n",
         "Referenced from the blog post about NODE and CatBoost on [Follow the Data](https://followthedata.wordpress.com/modelling-tabular-data-with-catboost-and-node)."
       ]
@@ -437,9 +439,7 @@
       "metadata": {
         "id": "m848we_zz9-O"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": 87,
       "outputs": []
     },
@@ -1573,9 +1573,7 @@
       "metadata": {
         "id": "1Ysr44cQI1PU"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
