--- a/experiment_notebooks/03_tabnet_xgboost_income.ipynb
+++ b/experiment_notebooks/03_tabnet_xgboost_income.ipynb
@@ -1781,6 +1781,7 @@
         "outputId": "7d99e11b-8032-42fd-bf39-dcc02dc2a84b"
       },
       "source": [
+        "# Save losses and errors\n",
         "tabnet_losses = pd.concat([pd.Series(classifier.history['val_0_logloss']), pd.Series(classifier.history['val_1_logloss'])], keys=['Train NLL (TabNet)', 'Test NLL (TabNet)'], axis=1)\n",
         "tabnet_errors = pd.concat([pd.Series(classifier.history['val_0_accuracy']), pd.Series(classifier.history['val_1_accuracy'])], keys=['Train Accuracy (TabNet)', 'Test Accuracy (TabNet)'], axis=1)\n",
         "\n",
@@ -2194,7 +2195,7 @@
         "id": "BcUlsaiXkt-T"
       },
       "source": [
-        "# XGB"
+        "# XGBoost"
       ]
     },
     {
@@ -2446,6 +2447,7 @@
         "outputId": "ef514427-ec4e-4a89-a315-e921e4e9917c"
       },
       "source": [
+        "# Save losses and errors\n",
         "xgb_boost_losses = pd.concat([pd.Series(clf_xgb.evals_result()['validation_0']['logloss']), pd.Series(clf_xgb.evals_result()['validation_1']['logloss'])], keys=['Train NLL (XGB)', 'Test NLL (XGB)'], axis=1)\n",
         "xgb_boost_errors = pd.concat([1 - pd.Series(clf_xgb.evals_result()['validation_0']['error']), 1 - pd.Series(clf_xgb.evals_result()['validation_1']['error'])], keys=['Train Accuracy (XGB)', 'Test Accuracy (XGB)'], axis=1)\n",
         "\n",
